Fixed awkward spacing between what we do and past projects

--- a/disc-website/src/app/globals.css
+++ b/disc-website/src/app/globals.css
@@ -165,12 +165,12 @@ h4 {
   font-size: medium;
   font-family: 'DM Sans';
   margin-top: 1rem; /* Add spacing above paragraphs */
-  margin-bottom: 1rem; /* Add spacing below paragraphs */
+  /* margin-bottom: 1rem; Add spacing below paragraphs */
 }
 
 .boxes {
   background-color: white;
-  padding-bottom: 15.0rem;
+  /* padding-bottom: 2rem; */
   padding-left: 2rem;
   padding-right: 2rem;
   display: grid;
@@ -200,7 +200,7 @@ h4 {
 }
 
 .title{
-  padding-top: 10.0rem;
+  padding-top: 5rem;
   padding-bottom: 3rem;
   color: theme("colors.headerColor");
   text-align: center;
